--- a/more.html
+++ b/more.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>More - Kokoa Clone</title>
+    <title>Welcome to Kokoa Clone</title>
   </head>
   <body>
     <div class="status-bar">
@@ -21,102 +21,18 @@
         <i class="fas fa-bolt"></i>
       </div>
     </div>
-    <header class="screen-header">
-      <h1 class="screen-header__title">More</h1>
-      <div class="screen-header__icons">
-        <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="fas fa-music fa-lg"></i></span>
-        <span
-          ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
-        ></span>
-      </div>
+    <header class="welcome-header">
+      <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+      <p class="welcome-header__text">
+        If you have a Kokoa Account, log in with your email or phone number.
+      </p>
     </header>
-    <main class="main-screen more-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://avatars3.githubusercontent.com/ppneppoppo"
-            class="user-component__avatar user-component__avatar--xl"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">김미니</h4>
-            <h6 class="user-component__subtitle">+ 소비자정책파트/김정민/1011038</h6>
-          </div>
-        </div>
-        <div class="user-component__column">
-          <i class="far fa-comment-alt fa-2x"></i>
-        </div>
-      </div>
-      <div class="icon-row">
-        <div class="icon-row__icon">
-          <i class="far fa-calendar"></i>
-          <span>Calendar</span>
-        </div>
-        <div class="icon-row__icon">
-          <i class="far fa-smile-beam"></i>
-          <span>Emoticons</span>
-        </div>
-        <div class="icon-row__icon">
-          <i class="fas fa-paint-roller"></i>
-          <span>Themes</span>
-        </div>
-        <div class="icon-row__icon">
-          <i class="fas fa-file-invoice-dollar"></i>
-          <span>Account</span>
-        </div>
-      </div>
-
-      <div class="more-suggestions">
-        <h4 class="more-suggestions__title">Suggestions</h4>
-        <div class="more-suggestions__icons">
-
-          <div class="more-suggestions__icon">
-            <div class="more-suggestions__icon-image">
-              <i class="fas fa-quote-right"></i>
-            </div>
-            <span class="more-suggestions__icon-text">Kokoa Story</span>
-          </div>
-
-          <div class="more-suggestions__icon">
-            <div class="more-suggestions__icon-image">
-              <i class="fas fa-quote-right"></i>
-            </div>
-            <span class="more-suggestions__icon-text">Kokoa Story</span>
-          </div>
-
-        </div>
-      </div>
-    </main>
-    <nav class="nav">
-      <ul class="nav__list">
-
-        <li class="nav__btn">
-          <a class="nav__link" href="friends.html"
-            ><i class="far fa-user fa-2x"></i
-          ></a>
-        </li>
-
-        <li class="nav__btn">
-          <a class="nav__link" href="chats.html">
-            <span class="nav__notification badge">1</span>
-            <i class="far fa-comment fa-2x"></i>
-          </a>
-        </li>
-
-        <li class="nav__btn">
-          <a class="nav__link" href="find.html"
-            ><i class="fas fa-search fa-2x"></i
-          ></a>
-        </li>
-
-        <li class="nav__btn">
-          <a class="nav__link" href="more.html"
-            ><i class="fas fa-ellipsis-h fa-2x"></i
-          ></a>
-        </li>
-
-      </ul>
-    </nav>
+    <form action="friends.html" method="get" id="login-form">
+      <input name="username" type="text" placeholder="Email or phone number" />
+      <input name="password" type="password" placeholder="Password" />
+      <input type="submit" value="Log In" />
+      <a href="#">Find Kokoa Account or Password</a>
+    </form>
 
     <div id="no-mobile">
       <span>Your screen is too big T.T</span>
