--- a/more.html
+++ b/more.html
@@ -39,8 +39,8 @@
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Nicolas</h4>
-            <h6 class="user-component__subtitle">+ 787 666 999</h6>
+            <h4 class="user-component__title">김미니</h4>
+            <h6 class="user-component__subtitle">소비자정책파트/1011038/김정민</h6>
           </div>
         </div>
         <div class="user-component__column">
