--- a/more.html
+++ b/more.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>More - Kokoa Clone</title>
+    <title> More - Peach talk </title>
   </head>
   <body>
     <div class="status-bar">
@@ -35,7 +35,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://avatars3.githubusercontent.com/u/3612017"
+            src="https://avatars3.githubusercontent.com/ppneppoppo"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
