--- a/settings.html
+++ b/settings.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Settings - Kokoa Clone</title>
+    <title>Settings - Peach talk </title>
   </head>
   <body>
     <div class="status-bar">
@@ -13,7 +13,7 @@
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>14:00</span>
       </div>
       <div class="status-bar__column">
         <span>110%</span>
@@ -46,7 +46,7 @@
         <li class="settings__setting">
           <div class="settings__setting-column">
             <i class="fas fa-flask"></i>
-            <span>Kokoa Lab</span>
+            <span>Peach Lab</span>
           </div>
           <div class="settings__setting-column"></div>
         </li>
