--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to Kokoa Clone</title>
+    <title>Welcome to Peach talk </title>
   </head>
   <body>
     <div class="status-bar">
@@ -13,7 +13,7 @@
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>14:00</span>
       </div>
       <div class="status-bar__column">
         <span>110%</span>
@@ -22,16 +22,16 @@
       </div>
     </div>
     <header class="welcome-header">
-      <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+      <h1 class="welcome-header__title">Welcome to Peach talk</h1>
       <p class="welcome-header__text">
-        If you have a Kokoa Account, log in with your email or phone number.
+        If you have a Peach talk Account, log in with your email or phone number.
       </p>
     </header>
     <form action="friends.html" method="get" id="login-form">
       <input name="username" type="text" placeholder="Email or phone number" />
       <input name="password" type="password" placeholder="Password" />
       <input type="submit" value="Log In" />
-      <a href="#">Find Kokoa Account or Password</a>
+      <a href="#">Find Peach talk Account or Password</a>
     </form>
 
     <div id="no-mobile">
