--- a/find.html
+++ b/find.html
@@ -71,7 +71,7 @@
           </div>
           <div class="open-post__column">
             <div class="open-post__photo">
-              <img src="https://github.com/ppneppoppo/peach-talk/blob/gh-pages/pinkpeach.jpeg" />
+              <img src="https://ppneppoppo.githubusercontent.com/peach-talk/blob/gh-pages/pinkpeach" />
               <div class="open-post__heart-count">
                 <i class="fas fa-heart fa-xs"></i><span>326</span>
               </div>
