--- a/more.html
+++ b/more.html
@@ -72,13 +72,13 @@
             <div class="more-suggestions__icon-image">
               <i class="fas fa-quote-right"></i>
             </div>
-            <span class="more-suggestions__icon-text">Kokoa Story</span>
+            <span class="more-suggestions__icon-text">Peach Story</span>
           </div>
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
               <i class="fas fa-quote-right"></i>
             </div>
-            <span class="more-suggestions__icon-text">Kokoa Story</span>
+            <span class="more-suggestions__icon-text">Peach Story</span>
           </div>
         </div>
       </div>
