--- a/chat.html
+++ b/chat.html
@@ -24,7 +24,7 @@
     <header class="alt-header">
       <div class="alt-header__column">
         <a href="chats.html">
-          <i class="fas fa-angle-left fa-3x"></i>
+          <i class="fa-solid fa-peach"></i>
         </a>
       </div>
       <div class="alt-header__column">
