--- a/friends.html
+++ b/friends.html
@@ -99,7 +99,7 @@
       </ul>
     </nav>
     <div id="splash-screen">
-      <i class="fas fa-comment"></i>
+      <i class="fa-solid fa-heart"></i>   
     </div>
 
     <div id="no-mobile">
@@ -107,7 +107,7 @@
     </div>
 
     <script
-      src="https://kit.fontawesome.com/6478f529f2.js"
+      src="https://kit.fontawesome.com/13649e963a.js"       
       crossorigin="anonymous"
     ></script>
   </body>
