--- a/more.html
+++ b/more.html
@@ -34,25 +34,23 @@
         <div class="user-component__column">
           <img
             src="https://avatars3.githubusercontent.com/ppneppoppo"
-            class="user-component__avatar user-component__avatar--xl"
-          />
+            class="user-component__avatar user-component__avatar--xl"/>
           <div class="user-component__text">
             <h4 class="user-component__title">김미니</h4>
             <h6 class="user-component__subtitle">소비자정책파트/1011038/김정민</h6>
           </div>
         </div>
-        <div class="user-component__column">
-          <i class="far fa-comment-alt fa-2x"></i>
+          <div class="user-component__column"><i class="far fa-comment-alt fa-2x"></i></div>
         </div>
-      </div>
-      
+   
+   
       <div class="icon-row">
         <div class="icon-row__icon"><i class="far fa-calendar"></i><span>Calendar</span></div>
         <div class="icon-row__icon"><i class="far fa-smile-beam"></i><span>Emoticons</span></div>
         <div class="icon-row__icon"><i class="fas fa-paint-roller"></i><span>Themes</span></div>
         <div class="icon-row__icon"><i class="fas fa-file-invoice-dollar"></i><span>Account</span></div>
       </div>
-      
+   
       <div class="more-suggestions">
         <h4 class="more-suggestions__title">Suggestions</h4>
         <div class="more-suggestions__icons">
