--- a/more.html
+++ b/more.html
@@ -31,7 +31,7 @@
           <img
             src="https://avatars3.githubusercontent.com/ppneppoppo"
             class="user-component__avatar user-component__avatar--xl"/>
-          
+        </div>  
         <div class="user-component__text">
            <h4 class="user-component__title">김미니</h4>
            <h6 class="user-component__subtitle">소비자정책파트 김정민</h6>
