--- a/more.html
+++ b/more.html
@@ -36,9 +36,7 @@
            <h4 class="user-component__title">김미니</h4>
            <h6 class="user-component__subtitle">소비자정책파트 김정민</h6>
         </div>
-      </div>
-      
-      <div class="user-component__column"><i class="far fa-comment-alt fa-2x"></i></div></div>
+        <div class="user-component__column"><i class="far fa-comment-alt fa-2x"></i></div></div>
    
       <div class="icon-row">
         <div class="icon-row__icon"><i class="far fa-calendar"></i><span>Calendar</span></div>
@@ -59,16 +57,14 @@
             <div class="more-suggestions__icon-image"><i class="fas fa-quote-right"></i></div>
             <span class="more-suggestions__icon-text">Peach Story</span>
           </div>
-     </div>
-    </div>
-  </main>
+        </div>
+      </div>
+    </main>
     
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
-          <a class="nav__link" href="friends.html"
-            ><i class="far fa-user fa-2x"></i
-          ></a>
+          <a class="nav__link" href="friends.html"><i class="far fa-user fa-2x"></i></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
@@ -82,9 +78,7 @@
           ></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="more.html"
-            ><i class="fas fa-ellipsis-h fa-2x"></i
-          ></a>
+          <a class="nav__link" href="more.html"><i class="fas fa-ellipsis-h fa-2x"></i></a>
         </li>
       </ul>
     </nav>
@@ -95,7 +89,6 @@
 
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
   </body>
 </html>
