--- a/more.html
+++ b/more.html
@@ -49,48 +49,48 @@
           <i class="far fa-comment-alt fa-2x"></i>
         </div>
       </div>
-      <div class="icon-row">
-        <div class="icon-row__icon">
-          <i class="far fa-calendar"></i>
-          <span>Calendar</span>
+        <div class="icon-row">
+          <div class="icon-row__icon">
+            <i class="far fa-calendar"></i>
+            <span>Calendar</span>
+          </div>
+          <div class="icon-row__icon">
+            <i class="far fa-smile-beam"></i>
+            <span>Emoticons</span>
+          </div>
+          <div class="icon-row__icon">
+            <i class="fas fa-paint-roller"></i>
+            <span>Themes</span>
+          </div>
+          <div class="icon-row__icon">
+            <i class="fas fa-file-invoice-dollar"></i>
+            <span>Account</span>
+          </div>
         </div>
-        <div class="icon-row__icon">
-          <i class="far fa-smile-beam"></i>
-          <span>Emoticons</span>
-        </div>
-        <div class="icon-row__icon">
-          <i class="fas fa-paint-roller"></i>
-          <span>Themes</span>
-        </div>
-        <div class="icon-row__icon">
-          <i class="fas fa-file-invoice-dollar"></i>
-          <span>Account</span>
-        </div>
-      </div>
-      <div class="more-suggestions">
-        <h4 class="more-suggestions__title">Suggestions</h4>
+      
+        <div class="more-suggestions">
+          <h4 class="more-suggestions__title">Suggestions</h4>
         <div class="more-suggestions__icons">
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
               <i class="fas fa-quote-right"></i>
             </div>
-            <span class="more-suggestions__icon-text">Kokoa Story</span>
+            <span class="more-suggestions__icon-text">Peach Story</span>
           </div>
-          <div class="more-suggestions__icon">
-            <div class="more-suggestions__icon-image">
+        <div class="more-suggestions__icon">
+              <div class="more-suggestions__icon-image">
               <i class="fas fa-quote-right"></i>
-            </div>
-            <span class="more-suggestions__icon-text">Kokoa Story</span>
+        </div>
+            <span class="more-suggestions__icon-text">Peach Story</span>
           </div>
         </div>
       </div>
     </main>
+    
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
-          <a class="nav__link" href="friends.html"
-            ><i class="far fa-user fa-2x"></i
-          ></a>
+          <a class="nav__link" href="friends.html"><i class="far fa-user fa-2x"></i></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
@@ -99,14 +99,10 @@
           </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="find.html"
-            ><i class="fas fa-search fa-2x"></i
-          ></a>
+          <a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="more.html"
-            ><i class="fas fa-ellipsis-h fa-2x"></i
-          ></a>
+          <a class="nav__link" href="more.html"><i class="fas fa-ellipsis-h fa-2x"></i></a>
         </li>
       </ul>
     </nav>
