--- a/more.html
+++ b/more.html
@@ -26,10 +26,7 @@
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
-        <span
-          ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
-        ></span>
+        <span><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a></span>
       </div>
     </header>
 
@@ -53,16 +50,10 @@
           <div class="icon-row__icon">
             <i class="far fa-calendar"></i>
             <span>Calendar</span>
-          </div>
-          <div class="icon-row__icon">
             <i class="far fa-smile-beam"></i>
             <span>Emoticons</span>
-          </div>
-          <div class="icon-row__icon">
             <i class="fas fa-paint-roller"></i>
             <span>Themes</span>
-          </div>
-          <div class="icon-row__icon">
             <i class="fas fa-file-invoice-dollar"></i>
             <span>Account</span>
           </div>
@@ -108,7 +99,6 @@
     </nav>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
   </body>
 </html>
