--- a/more.html
+++ b/more.html
@@ -48,13 +48,23 @@
         
       <div class="icon-row">
           <div class="icon-row__icon">
-            <i class="far fa-calendar"></i>
+            <i class="far fa-calendar-alt fa-2x"></i>
             <span>Calendar</span>
-            <i class="far fa-smile-beam"></i>
+          </div>
+          <div class="icon-row__icon">
+            <i class="far fa-car fa-2x"></i>
+            <span>Talk Drive</span>
+          </div>  
+          <div class="icon-row__icon">
+            <i class="fas fa-smile-wink fa-2x"></i>
             <span>Emoticons</span>
-            <i class="fas fa-paint-roller"></i>
+          </div>  
+          <div class="icon-row__icon">
+            <i class="fas fa-brush fa-2x"></i>
             <span>Themes</span>
-            <i class="fas fa-file-invoice-dollar"></i>
+          </div>
+          <div class="icon-row__icon">
+            <i class="fas fa-share-alt fa-2x"></i>
             <span>Account</span>
           </div>
       </div>
