--- a/more.html
+++ b/more.html
@@ -52,8 +52,8 @@
             <span>Calendar</span>
           </div>
           <div class="icon-row__icon">
-            <i class="far fa-car fa-2x"></i>
-            <span>Talk Drive</span>
+            <i class="fa-solid fa-gift"></i>
+            <span>선물하기</span>
           </div>  
           <div class="icon-row__icon">
             <i class="fas fa-smile-wink fa-2x"></i>
