--- a/more.html
+++ b/more.html
@@ -49,7 +49,7 @@
       <div class="icon-row">
           <div class="icon-row__icon">
             <i class="far fa-calendar-alt fa-2x"></i>
-            <span>Calendar</span>
+            <span>달력</span>
           </div>
           <div class="icon-row__icon">
             <i class="fa-solid fa-gift"></i>
@@ -57,11 +57,11 @@
           </div>  
           <div class="icon-row__icon">
             <i class="fas fa-smile-wink fa-2x"></i>
-            <span>Emoticons</span>
+            <span>이모티콘</span>
           </div>  
           <div class="icon-row__icon">
             <i class="fas fa-brush fa-2x"></i>
-            <span>Themes</span>
+            <span>테마</span>
         </div>
       </div>
       
