--- a/friends.html
+++ b/friends.html
@@ -55,7 +55,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="./css/components/어피치.jpeg"
+              src="./css/components/appeach.jpeg"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
