--- a/more.html
+++ b/more.html
@@ -48,19 +48,19 @@
         
       <div class="icon-row">
           <div class="icon-row__icon">
-            <i class="far fa-calendar-alt fa-2x"></i>
+            <i class="far fa-calendar-alt fa-3x"></i>
             <span>달력</span>
           </div>
           <div class="icon-row__icon">
-            <i class="fa-solid fa-gift"></i>
+            <i class="fa-solid fa-gift-3x"></i>
             <span>선물하기</span>
           </div>  
           <div class="icon-row__icon">
-            <i class="fas fa-smile-wink fa-2x"></i>
+            <i class="fas fa-smile-wink fa-3x"></i>
             <span>이모티콘</span>
           </div>  
           <div class="icon-row__icon">
-            <i class="fas fa-brush fa-2x"></i>
+            <i class="fas fa-brush fa-3x"></i>
             <span>테마</span>
         </div>
       </div>
