--- a/more.html
+++ b/more.html
@@ -52,7 +52,7 @@
             <span>달력</span>
           </div>
           <div class="icon-row__icon">
-            <i class="fa-solid fa-gift-2x"></i>
+            <i class="fa-solid fa-gift"></i>
             <span>선물하기</span>
           </div>  
           <div class="icon-row__icon">
