--- a/chat.html
+++ b/chat.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
+    <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat with Peach</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <title>Chat w/ Nico - Kokoa Clone</title>
   </head>
   <body id="chat-screen">
     <div class="status-bar">
@@ -14,7 +13,7 @@
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>14:00</span>
+        <span>18:43</span>
       </div>
       <div class="status-bar__column">
         <span>110%</span>
@@ -22,66 +21,50 @@
         <i class="fas fa-bolt"></i>
       </div>
     </div>
-
     <header class="alt-header">
       <div class="alt-header__column">
         <a href="chats.html">
-          <i class="fas fa-angle-left fa-2x"></i>
+          <i class="fas fa-angle-left fa-3x"></i>
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">Marcus</h1>
+        <h1 class="alt-header__title">니꼬</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="fas fa-bars fa-lg"></i></i></span>
+        <span><i class="fas fa-bars fa-lg"></i></span>
       </div>
     </header>
-
     <main class="main-screen main-chat">
       <div class="chat__timestamp">
-        Tuesday, January 30, 2022
+        Sunday, August 7, 2022
       </div>
-
-      <div class="message-row message-row-you">
-        <img src="./css/KakaoTalk_Photo_2022-08-05-23-04-14.jpeg" />
+      <div class="message-row">
+        <img src="https://avatars3.githubusercontent.com/u/3612017" />
         <div class="message-row__content">
-          <span class="message__author">Mini</span>
+          <span class="message__author">Nicolas</span>
           <div class="message__info">
-            <span class="message__bubble">Hi! babe.</span>
-            <span class="message__time">21:10</span>
+            <span class="message__bubble">Hi!</span>
+            <span class="message__time">11:11</span>
           </div>
         </div>
       </div>
-
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble">무슨 일이야!!</span>
-            <span class="message__time">21:16</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="message-row message-row-you">
-        <img src="./css/components/img1.jpg" />
-        <div class="message-row__content">
-          <span class="message__author">Mini</span>
-          <div class="message__info">
-            <span class="message__bubble">나 할 말이 있엉~</span>
-            <span class="message__time">21:22</span>
+            <span class="message__bubble">Hi nice to meet you!</span>
+            <span class="message__time">11:11</span>
           </div>
         </div>
       </div>
     </main>
-
     <form class="reply">
       <div class="reply__column">
         <i class="far fa-plus-square fa-lg"></i>
       </div>
       <div class="reply__column">
         <input type="text" placeholder="Write a message..." />
-        <i class="far fa-smile-beam fa-lg"></i>
+        <i class="far fa-smile-wink fa-lg"></i>
         <button>
           <i class="fas fa-arrow-up"></i>
         </button>
@@ -89,8 +72,9 @@
     </form>
 
     <div id="no-mobile">
-      <span>Your screen is too big ㅠㅠ</span>
+      <span>Your screen is too big T.T</span>
     </div>
+
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
