--- a/chat.html
+++ b/chat.html
@@ -13,7 +13,7 @@
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>14:00</span>
       </div>
       <div class="status-bar__column">
         <span>110%</span>
@@ -28,7 +28,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">니꼬</h1>
+        <h1 class="alt-header__title">미니</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -42,9 +42,9 @@
       <div class="message-row">
         <img src="https://avatars3.githubusercontent.com/u/3612017" />
         <div class="message-row__content">
-          <span class="message__author">Nicolas</span>
+          <span class="message__author">미니</span>
           <div class="message__info">
-            <span class="message__bubble">Hi!</span>
+            <span class="message__bubble">안녕~</span>
             <span class="message__time">11:11</span>
           </div>
         </div>
@@ -52,8 +52,8 @@
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble">Hi nice to meet you!</span>
-            <span class="message__time">11:11</span>
+            <span class="message__bubble">반가웡!</span>
+            <span class="message__time">11:12</span>
           </div>
         </div>
       </div>
