--- a/chat.html
+++ b/chat.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat w/ Nico - Kokoa Clone</title>
+    <title>Chat with Peach</title>
   </head>
   <body id="chat-screen">
     <div class="status-bar">
