--- a/chat.html
+++ b/chat.html
@@ -39,7 +39,7 @@
       <div class="chat__timestamp">
         Sunday, August 7, 2022
       </div>
-      <div class="message-row">
+      <div class="message-row message-row-you">
         <img src="https://avatars3.githubusercontent.com/u/3612017" />
         <div class="message-row__content">
           <span class="message__author">미니</span>
