--- a/chat.html
+++ b/chat.html
@@ -28,7 +28,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">미니</h1>
+        <h1 class="alt-header__title">이순신</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -42,9 +42,9 @@
       <div class="message-row message-row-you">
         <img src="https://avatars3.githubusercontent.com/u/3612017" />
         <div class="message-row__content">
-          <span class="message__author">미니</span>
+          <span class="message__author">이순신</span>
           <div class="message__info">
-            <span class="message__bubble">안녕~</span>
+            <span class="message__bubble">완벽한 승리가 필요하다...!</span>
             <span class="message__time">11:11</span>
           </div>
         </div>
@@ -53,7 +53,7 @@
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble">반가웡!</span>
+            <span class="message__bubble">복카센....!!!?!</span>
             <span class="message__time">11:12</span>
           </div>
         </div>
