--- a/chat.html
+++ b/chat.html
@@ -44,7 +44,7 @@
         <div class="message-row__content">
           <span class="message__author">이순신</span>
           <div class="message__info">
-            <span class="message__bubble">완벽한 승리가 필요하다...!</span>
+            <span class="message__bubble">한산 : 용의출현/ 완벽한 승리가 필요하다........!!!</span>
             <span class="message__time">11:11</span>
           </div>
         </div>
@@ -53,7 +53,7 @@
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble">복카센....!!!?!</span>
+            <span class="message__bubble">복카이센...? /두려움은 전염병이다 ~~~ </span>
             <span class="message__time">11:12</span>
           </div>
         </div>
