--- a/chat.html
+++ b/chat.html
@@ -28,7 +28,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">이순신</h1>
+        <h1 class="alt-header__title">한산 : 용의 출현</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -43,9 +43,9 @@
       <div class="message-row message-row-you">
         <img src="https://avatars3.githubusercontent.com/u/3612017" />
         <div class="message-row__content">
-          <span class="message__author">준사</span>
+          <span class="message__author">이순신</span>
           <div class="message__info">
-            <span class="message__bubble">이 전쟁은 무엇입니까?</span>
+            <span class="message__bubble">완벽한 승리가 필요하다 </span>
             <span class="message__time">11:11</span>
           </div>
         </div>
@@ -54,7 +54,7 @@
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble">의와 불의의 싸움이지. 완벽한 승리가 필요하다. 이곳 한산이 진정 큰 산이 되어 지켜낼 수 있기를 바라보세나 </span>
+            <span class="message__bubble"> 복카이센...? </span>
             <span class="message__time">11:12</span>
           </div>
         </div>
