--- a/chats.html
+++ b/chats.html
@@ -39,9 +39,9 @@
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__text">
-              <h4 class="user-component__title">Nicolas</h4>
+              <h4 class="user-component__title">이순신</h4>
               <h6 class="user-component__subtitle">
-                hello bro whats up
+                태산에는 태수미~ 한산에는 이순신!
               </h6>
             </div>
           </div>
