--- a/chat.html
+++ b/chat.html
@@ -54,7 +54,7 @@
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble"> 메구라부네 아니었네.... 복카이센...???! </span>
+            <span class="message__bubble"> 메구라부네...? 복카이센!!! </span>
             <span class="message__time">11:12</span>
           </div>
         </div>
