--- a/chat.html
+++ b/chat.html
@@ -41,11 +41,11 @@
       </div>
 
       <div class="message-row message-row-you">
-        <img src="https://avatars3.githubusercontent.com/u/3612017" />
+        <img src="./css/이순신.jpg" />
         <div class="message-row__content">
           <span class="message__author">이순신</span>
           <div class="message__info">
-            <span class="message__bubble">완벽한 승리가 필요하다...!!!</span>
+            <span class="message__bubble">압도적 승리가 필요하다...!!!</span>
             <span class="message__time">11:11</span>
           </div>
         </div>
