--- a/chat.html
+++ b/chat.html
@@ -41,7 +41,7 @@
       </div>
 
       <div class="message-row message-row-you">
-        <img src="./css/이순신.jpg">
+        <img src="./css/이순신.jpg"/>
         <div class="message-row__content">
           <span class="message__author">이순신</span>
           <div class="message__info">
@@ -52,10 +52,12 @@
       </div>
 
       <div class="message-row message-row--own">
-          <div class="message__info">
-            <span class="message__bubble"> 메구라부네...? 복카이센!!! </span>
-            <span class="message__time">11:12</span>
+         <div class="message-row__content">
+            <div class="message__info">
+              <span class="message__bubble"> 메구라부네...? 복카이센!!! </span>
+              <span class="message__time">11:12</span>
           </div>
+        </div
       </div>
     </main>
     
