--- a/chat.html
+++ b/chat.html
@@ -41,7 +41,7 @@
       </div>
 
       <div class="message-row message-row-you">
-        <img src="./css/이순신.jpg"/>
+        <img src="./css/lee.jpg">
         <div class="message-row__content">
           <span class="message__author">이순신</span>
           <div class="message__info">
