--- a/chats.html
+++ b/chats.html
@@ -35,7 +35,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="https://avatars3.githubusercontent.com/u/3612017"
+              src=""./css/lee.jpg""
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__text">
