--- a/chats.html
+++ b/chats.html
@@ -35,7 +35,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src=""./css/lee.jpg""
+              src="./css/lee.jpg"
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__text">
