--- a/friends.html
+++ b/friends.html
@@ -37,11 +37,11 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://avatars3.githubusercontent.com/ppneppoppo"
+            src="./css/lee.jpg"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">김미니</h4>
+            <h4 class="user-component__title">이순신</h4>
             <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
           </div>
         </div>
@@ -55,12 +55,12 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="./css/components/appeach.jpeg"
+              src="./css/japan.jpeg"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
               <h4 class="user-component__title user-component__title--not-bold">
-                채널
+                와키자카
               </h4>
             </div>
           </div>
