--- a/friends.html
+++ b/friends.html
@@ -49,7 +49,7 @@
       </div>
       <div class="friends-screen__channel">
         <div class="friends-screen__channel-header">
-          <span>채널</span>
+          <span>왜군</span>
           <i class="fas fa-chevron-up fa-xs"></i>
         </div>
         <div class="user-component">
@@ -66,7 +66,7 @@
           </div>
           <div class="user-component__column">
             <div>
-              <span>2</span>
+              <span>1</span>
               <i class="fas fa-chevron-right fa-xs"></i>
             </div>
           </div>
