--- a/more.html
+++ b/more.html
@@ -37,8 +37,8 @@
             src="https://avatars3.githubusercontent.com/ppneppoppo"
             class="user-component__avatar user-component__avatar--xl"/>
             <div class="user-component__text">
-              <h4 class="user-component__title">김정민</h4>
-              <h6 class="user-component__subtitle">소비자정책파트</h6>
+              <h4 class="user-component__title">이순신</h4>
+              <h6 class="user-component__subtitle">한산 : 용의 출현</h6>
             </div>
           </div>
           <div class="user-component__column">
