--- a/find.html
+++ b/find.html
@@ -48,10 +48,10 @@
         </div>
         <div class="open-post">
           <div class="open-post__column">
-            <h5 class="open-post__title">#BTS</h5>
-            <h6 class="open-post__hashtags">#bts#army#friends</h6>
+            <h5 class="open-post__title">#한산</h5>
+            <h6 class="open-post__hashtags">#용의출현 #이순신장군 #구선</h6>
             <div class="open-post__members">
-              <img src="https://avatars3.githubusercontent.com/u/3612017" />
+              <img src="./css/hansan.jpeg" />
               <span class="open-post__member-count">802 members</span>
               <div class="divider"></div>
               <span class="open-post__member-status">Active</span>
@@ -59,7 +59,7 @@
           </div>
           <div class="open-post__column">
             <div class="open-post__photo">
-              <img src="https://avatars3.githubusercontent.com/u/3612017" />
+              <img src="./css/hansan.jpeg">
               <div class="open-post__heart-count">
                 <i class="fas fa-heart fa-xs"></i><span>326</span>
               </div>
