--- a/more.html
+++ b/more.html
@@ -34,7 +34,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://avatars3.githubusercontent.com/ppneppoppo"
+            src="./css/lee.jpg"
             class="user-component__avatar user-component__avatar--xl"/>
             <div class="user-component__text">
               <h4 class="user-component__title">이순신</h4>
