--- a/chats.html
+++ b/chats.html
@@ -49,6 +49,19 @@
             <span class="user-component__time">21:22</span>
             <div class="badge">1</div>
           </div>
+
+          <div class="user-component__column">
+            <img
+              src="./css/japan.jpeg"
+              class="user-component__avatar user-component__avatar"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">와키자카</h4>
+              <h6 class="user-component__subtitle">
+                복...복카이센!!!
+              </h6>
+            </div>
+          </div>
         </div>
       </a>
     </main>
