--- a/more.html
+++ b/more.html
@@ -38,7 +38,7 @@
             class="user-component__avatar user-component__avatar--xl"/>
             <div class="user-component__text">
               <h4 class="user-component__title">이순신</h4>
-              <h6 class="user-component__subtitle">한산 : 용의 출현</h6>
+              <h6 class="user-component__subtitle">조선의 장군</h6>
             </div>
           </div>
           <div class="user-component__column">
