--- a/chats.html
+++ b/chats.html
@@ -49,10 +49,12 @@
             <span class="user-component__time">21:22</span>
             <div class="badge">1</div>
           </div>
-
+        </div>
+        
+        <div class="user-component">
           <div class="user-component__column">
             <img
-              src="./css/japan.jpeg"
+              src="./css/japan.jpg"
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__text">
@@ -61,6 +63,10 @@
                 복...복카이센!!!
               </h6>
             </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">21:22</span>
+            <div class="badge">1</div>
           </div>
         </div>
       </a>
