--- a/chats.html
+++ b/chats.html
@@ -54,7 +54,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="./css/japan.jpg"
+              src="./css/japan.jpeg"
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__text">
