--- a/chat.html
+++ b/chat.html
@@ -40,7 +40,7 @@
         Sunday, August 7, 2022
       </div>
 
-      <div class="message-row message-row-you">
+      <div class="message-row">
         <img src="./css/japan.jpeg">
         <div class="message-row__content">
           <span class="message__author">와키자카</span>
@@ -50,6 +50,7 @@
           </div>
         </div>
       </div>
+      
       <div class="message-row message-row--own">
          <div class="message-row__content">
             <div class="message__info">
