--- a/friends.html
+++ b/friends.html
@@ -47,27 +47,48 @@
         </div>
         <div class="user-component__column"></div>
       </div>
+
       <div class="friends-screen__channel">
         <div class="friends-screen__channel-header">
-          <span>왜군</span>
+          <span>채널</span>
           <i class="fas fa-chevron-up fa-xs"></i>
         </div>
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="./css/japan.jpeg"
+              src="./css/peach_main.jpeg"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
               <h4 class="user-component__title user-component__title--not-bold">
-                와키자카
+                 채널
               </h4>
             </div>
           </div>
           <div class="user-component__column">
             <div>
-              <span>1</span>
+              <span>3</span>
               <i class="fas fa-chevron-right fa-xs"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+      <div class="friends-screen__channel">
+        <div class="friends-screen__channel-header">
+          <span>친구</span>
+          <i class="fas fa-chevron-up fa-xs"></i>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="./css/na.jpeg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                 나대용
+              </h4>
             </div>
           </div>
         </div>
