--- a/friends.html
+++ b/friends.html
@@ -56,7 +56,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="./css/peach_main.jpeg"
+              src="./css/peacn_main.jpeg"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
@@ -88,6 +88,19 @@
             <div class="user-component__text">
               <h4 class="user-component__title user-component__title--not-bold">
                  나대용
+              </h4>
+            </div>
+          </div>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="./css/joonsa.jpeg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                 준사
               </h4>
             </div>
           </div>
