--- a/chat.html
+++ b/chat.html
@@ -28,7 +28,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">왜군</h1>
+        <h1 class="alt-header__title">준사</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -41,12 +41,12 @@
       </div>
 
       <div class="message-row">
-        <img src="./css/japan.jpeg">
+        <img src="./css/joonsa.jpeg">
          <div class="message-row__content"> 
-          <span class="message__author">와키자카</span>
+          <span class="message__author">준사</span>
             <div class="message__info">
-              <span class="message__bubble">복..복카이센!!!</span>
-              <span class="message__time">11:11</span>
+              <span class="message__bubble">이 전쟁은 무엇입니까...?</span>
+              <span class="message__time">06:00</span>
             </div>
          </div>
       </div>
@@ -54,11 +54,24 @@
       <div class="message-row message-row--own">
           <div class="message-row__content">
             <div class="message__info">
-              <span class="message__bubble"> 압도적 승리가 필요하다. </span>
-              <span class="message__time">11:12</span>
+              <span class="message__bubble"> 義와 不義의 싸움이다. </span>
+              <span class="message__time">06:03</span>
             </div>
           </div>
       </div>
+      
+       <div class="message-row">
+        <img src="./css/joonsa.jpeg">
+         <div class="message-row__content"> 
+          <span class="message__author">준사</span>
+            <div class="message__info">
+              <span class="message__bubble">나라와 나라의 싸움이 아닙니까? 지난 전투에서 나의 주군은 나를 방패 삼고 있었는데, 
+                부하를 위해 몸을 던지시는 모습을 보았습니다. 저를 거두어 주십시오!</span>
+              <span class="message__time">06:10</span>
+            </div>
+         </div>
+      </div>
+
     </main>
     
     <form class="reply">
