--- a/chat2.html
+++ b/chat2.html
@@ -28,7 +28,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">준사</h1>
+        <h1 class="alt-header__title">나대용</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -37,16 +37,39 @@
     </header>
     <main class="main-screen main-chat">
       <div class="chat__timestamp">
-        Sunday, August 7, 2022
+        Thursday, July 28, 2022
       </div>
 
       <div class="message-row">
-        <img src="./css/joonsa.jpeg">
+        <img src="./css/na.jpeg">
          <div class="message-row__content"> 
-          <span class="message__author">준사</span>
+          <span class="message__author">나대용</span>
             <div class="message__info">
-              <span class="message__bubble">이 전쟁은 무엇입니까...?</span>
+              <span class="message__bubble"> 장군, 정말 구선이 없어도 괜찮겠습니까? 제가 이번에 업그레이드 시켰습니다 ^^ 🐢</span>
               <span class="message__time">06:00</span>
+            </div>
+         </div>
+      </div>
+       <div class="chat__timestamp">
+        Saturday, August 6, 2022
+      </div>
+      <div class="message-row">
+        <img src="./css/na.jpeg">
+         <div class="message-row__content"> 
+          <span class="message__author">나대용</span>
+            <div class="message__info">
+              <span class="message__bubble">저는 신경쓰지 말고 쏘십시오...! </span>
+              <span class="message__time">16:30</span>
+            </div>
+         </div>
+      </div>
+      <div class="message-row">
+        <img src="./css/na.jpeg">
+         <div class="message-row__content"> 
+          <span class="message__author">나대용</span>
+            <div class="message__info">
+              <span class="message__bubble"> 완벽한 싸움이었던 것 같습니다. </span>
+              <span class="message__time">18:10</span>
             </div>
          </div>
       </div>
@@ -54,24 +77,11 @@
       <div class="message-row message-row--own">
           <div class="message-row__content">
             <div class="message__info">
-              <span class="message__bubble"> 義와 不義의 싸움이다. </span>
-              <span class="message__time">06:03</span>
+              <span class="message__bubble"> 아직.. 지금 우리에겐 압도적인 승리가 필요하다</span>
+              <span class="message__time">18:20</span>
             </div>
           </div>
       </div>
-      
-       <div class="message-row">
-        <img src="./css/joonsa.jpeg">
-         <div class="message-row__content"> 
-          <span class="message__author">준사</span>
-            <div class="message__info">
-              <span class="message__bubble">나라와 나라의 싸움이 아닙니까? 지난 전투에서 나의 주군은 나를 방패 삼고 있었는데, 
-                부하를 위해 몸을 던지시는 모습을 보았습니다. 저를 거두어 주십시오!</span>
-              <span class="message__time">06:10</span>
-            </div>
-         </div>
-      </div>
-
     </main>
     
     <form class="reply">
