--- a/chats.html
+++ b/chats.html
@@ -82,10 +82,15 @@
           <div class="user-component__column">
             <img
               src="./css/japan.jpeg"
-              class="user-component__avatar user-component__avatar"
+              class="user-component__avatar user-component__avatar--xs"
+            />
+            <img
+              src="./css/sa.jpeg"
+              class="user-component__avatar user-component__avatar--xs"
             />
             <div class="user-component__text">
-              <h4 class="user-component__title">와카자키</h4>
+              <h4 class="user-component__title">왜군</h4>
+              <h5 class="user-component__title">왜군</h5>
               <h6 class="user-component__subtitle">
                 복카이센... 
               </h6>
