--- a/chat3.html
+++ b/chat3.html
@@ -77,11 +77,18 @@
          </div>
       </div>
       <div class="message-row">
+            <div class="message__info">
+              <span class="message__bubble"> 전군 출정하라... 발포하라! </span>
+              <span class="message__time">16:30</span>
+            </div>
+         </div>
+      </div>
+      <div class="message-row">
         <img src="./css/japan.jpeg">
          <div class="message-row__content"> 
           <span class="message__author">와키자카 야스하루</span>
             <div class="message__info">
-              <span class="message__bubble">나의 조카 사효에...ㅠ 복카이센!!!</span>
+              <span class="message__bubble">나의 조카 사효에...ㅠ 복카이센이로구나!</span>
               <span class="message__time">18:10</span>
             </div>
          </div>
