--- a/chat3.html
+++ b/chat3.html
@@ -76,7 +76,7 @@
             </div>
          </div>
       </div>
-      <div class="message-row">
+      <div class="message-row message--own">
             <div class="message__info">
               <span class="message__bubble"> 전군 출정하라... 발포하라! </span>
               <span class="message__time">16:30</span>
