--- a/chats.html
+++ b/chats.html
@@ -82,15 +82,11 @@
           <div class="user-component__column">
             <img
               src="./css/japan.jpeg"
-              class="user-component__avatar user-component__avatar--xs"
-            />
-            <img
-              src="./css/sa.jpeg"
-              class="user-component__avatar user-component__avatar--xs"
-            />
+              class="user-component__avatar user-component__avatar"/>
             <div class="user-component__text">
-              <h6 class="user-component__subtitle2">
-                  복카이센... 
+              <h4 class="user-component__title">와키자카 야스하루</h4>
+              <h6 class="user-component__subtitle">
+                  복카이센...!!!
               </h6>
             </div>
           </div>
