--- a/more.html
+++ b/more.html
@@ -74,8 +74,8 @@
                   <span class="more-suggestions__icon-text">Peach Story</span>
                 </div>
               <div class="more-suggestions__icon">
-                <div class="more-suggestions__icon-image"><i class="fas fa-quote-right"></i></div>
-                <span class="more-suggestions__icon-text">Peach Story</span>
+                <div class="more-suggestions__icon-image"><i class="fa-solid fa-gamepad"></i></div>
+                <span class="more-suggestions__icon-text">Peach Games</span>
             </div>
           </div>
         </div>
