--- a/chat3.html
+++ b/chat3.html
@@ -73,6 +73,17 @@
           </div>
       </div>
 
+      <div class="message-row">
+        <img src="./css/japan.jpeg">
+         <div class="message-row__content"> 
+          <span class="message__author">와키자카 야스하루</span>
+            <div class="message__info">
+              <span class="message__bubble">복...복카이센!!!</span>
+              <span class="message__time">17:00</span>
+            </div>
+         </div>
+      </div>
+
     </main>
     
     <form class="reply">
