--- a/chat2.html
+++ b/chat2.html
@@ -68,7 +68,7 @@
          <div class="message-row__content"> 
           <span class="message__author">나대용</span>
             <div class="message__info">
-              <span class="message__bubble"> 완벽한 싸움이었던 것 같습니다. </span>
+              <span class="message__bubble"> 충분히 이긴 것 같습니다, 장군 </span>
               <span class="message__time">18:10</span>
             </div>
          </div>
