--- a/friends.html
+++ b/friends.html
@@ -133,7 +133,8 @@
       </ul>
     </nav>
     <div id="splash-screen">
-      <i class="fa-solid fa-heart"></i>   
+     <div class="splash-screen__icon-image">
+      <i class="fa-solid fa-heart"></i></div>  
     </div>
 
     <div id="no-mobile">
