--- a/friends.html
+++ b/friends.html
@@ -16,7 +16,7 @@
         <span>14:00</span>
       </div>
       <div class="status-bar__column">
-        <span>110%</span>
+        <span>100%</span>
         <i class="fas fa-battery-full fa-lg"></i>
         <i class="fas fa-bolt"></i>
       </div>
@@ -56,7 +56,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="./css/peacn_main.jpeg"
+              src="./css/peach_main.jpeg"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
