--- a/chats.html
+++ b/chats.html
@@ -84,9 +84,9 @@
               src="./css/japan.jpeg"
               class="user-component__avatar user-component__avatar"/>
             <div class="user-component__text">
-              <h4 class="user-component__title">와키자카 야스하루</h4>
+              <h4 class="user-component__title">와키자카</h4>
               <h6 class="user-component__subtitle">
-                  복카이센...!!!
+                  복...복카이센!!!
               </h6>
             </div>
           </div>
