--- a/chat.html
+++ b/chat.html
@@ -60,13 +60,40 @@
           </div>
       </div>
       
-       <div class="message-row">
+      <div class="message-row">
         <img src="./css/joonsa.jpeg">
          <div class="message-row__content"> 
           <span class="message__author">준사</span>
             <div class="message__info">
-              <span class="message__bubble">나라와 나라의 싸움이 아닙니까? 지난 전투에서 나의 주군은 나를 방패 삼고 있었는데, 
-                부하를 위해 몸을 던지시는 모습을 보았습니다. 저를 거두어 주십시오!</span>
+              <span class="message__bubble">나라와 나라의 싸움이 아닙니까?</span>
+              <span class="message__time">21:04</span>
+            </div>
+         </div>
+      </div>
+      <div class="message-row message-row--own">
+          <div class="message-row__content">
+            <div class="message__info">
+              <span class="message__bubble"> 그렇다 </span>
+              <span class="message__time">21:05</span>
+            </div>
+          </div>
+      </div>
+      <div class="message-row">
+        <img src="./css/joonsa.jpeg">
+         <div class="message-row__content"> 
+          <span class="message__author">준사</span>
+            <div class="message__info">
+              <span class="message__bubble">지난 전쟁에서 나의 주군은 나를 방패 삼고 있었는데, 부하를 위해 몸을 던지는 당신을 향해 제가 화살을 쏘았습니다. </span>
+              <span class="message__time">21:07</span>
+            </div>
+         </div>
+      </div>
+      <div class="message-row">
+        <img src="./css/joonsa.jpeg">
+         <div class="message-row__content"> 
+          <span class="message__author">준사</span>
+            <div class="message__info">
+              <span class="message__bubble"> 저를 거두어 주십시오. </span>
               <span class="message__time">21:10</span>
             </div>
          </div>
